[gd_scene load_steps=21 format=2]

[ext_resource path="res://Pausa.gd" type="Script" id=1]
[ext_resource path="res://Assets/Imagen/Inventario/inventario.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/computer_pixel-7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Imagen/Inventario/llaveInventario.png" type="Texture" id=4]
[ext_resource path="res://Assets/Imagen/Inventario/bombaInventario.png" type="Texture" id=5]
[ext_resource path="res://Assets/Imagen/Inventario/botaInventario.png" type="Texture" id=6]
[ext_resource path="res://Assets/Imagen/Inventario/espadaInventario.png" type="Texture" id=7]
[ext_resource path="res://Assets/Imagen/Inventario/A0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Imagen/Inventario/A1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Imagen/Inventario/A2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Imagen/Inventario/A3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Imagen/Inventario/B0.png" type="Texture" id=12]
[ext_resource path="res://Assets/Imagen/Inventario/B1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Imagen/Inventario/B2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Imagen/Inventario/B3.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Llave",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Bomba",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Botas",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Espada",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Vacio",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), null ],
"loop": true,
"name": "A",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), null ],
"loop": true,
"name": "B",
"speed": 5.0
} ]

[node name="Pausa" type="Popup"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="N_Llaves" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 537.0
margin_top = 564.0
margin_right = 606.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "x 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="N_Bombas" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 734.0
margin_top = 564.0
margin_right = 803.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "x 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Continue" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_top = 198.0
margin_right = 361.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.68042, 0.269531, 1 )
custom_colors/font_color_pressed = Color( 1, 0.472656, 0.472656, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Save" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 285.0
margin_right = 304.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.792297, 0.351562, 1 )
custom_colors/font_color_pressed = Color( 1, 0.464844, 0.464844, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Quit" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 389.0
margin_right = 300.0
margin_bottom = 475.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.751007, 0.222656, 1 )
custom_colors/font_color_pressed = Color( 1, 0.34375, 0.34375, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Inventario" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Slot1" type="AnimatedSprite" parent="Inventario" index="0"]

position = Vector2( 941.38, 266.634 )
frames = SubResource( 3 )
animation = "Llave"

[node name="Slot2" type="AnimatedSprite" parent="Inventario" index="1"]

position = Vector2( 1032.7, 269.336 )
frames = SubResource( 3 )
animation = "Bomba"

[node name="Slot3" type="AnimatedSprite" parent="Inventario" index="2"]

position = Vector2( 941.38, 373.625 )
frames = SubResource( 3 )
animation = "Espada"

[node name="Slot4" type="AnimatedSprite" parent="Inventario" index="3"]

position = Vector2( 1033.12, 370.421 )
frames = SubResource( 3 )
animation = "Botas"

[node name="SeleccionA" type="AnimatedSprite" parent="Inventario" index="4"]

position = Vector2( 988.528, 322.104 )
frames = SubResource( 4 )
animation = "A"
frame = 1

[node name="SeleccionB" type="AnimatedSprite" parent="Inventario" index="5"]

position = Vector2( 988.528, 322.104 )
frames = SubResource( 5 )
animation = "B"
frame = 1

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


